210303 | add shopping list sol

--- a/JavaScript/Event/event-delegation.html
+++ b/JavaScript/Event/event-delegation.html
@@ -23,12 +23,19 @@
       <li>9</li>
       <li>10</li>
     </ul>
+    <div>
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+    </div>
     <script>
-      // 이벤트 위임을 언제 활용할까?
-      // 아직 생성되지 않은, 또는 많은 자식 요소를 대상으로 하는 경우에
-      // 부모 요소 하나를 기준으로 모든 자식 요소에 대해서 이벤트를 등록할 수 있다.
+      // Q. 이벤트 위임을 언제 활용할까?
+      // A. 아직 생성되지 않은, 또는 많은 자식 요소를 대상으로 하는 경우에
+      //    부모 요소 하나를 기준으로 모든 자식 요소에 대해서 이벤트를 등록할 수 있다.
 
-      // 이벤트 위임(event delegation)의 장점
+      // Q. 이벤트 위임(event delegation)의 장점?
       // 1. 메모리 누수 방지 -> 1000개의 li 태그에 대해 1000개의 이벤트 함수가 만들어진다? (Bad)
 
       // Bad
@@ -42,9 +49,9 @@
       // Coooooooool 🙌
       const ul = document.querySelector("ul");
       ul.addEventListener("click", (event) => {
-        // 현재 타겟과 그냥 타겟의 차이는?!
-        // currentTarget: addEventListener가 붙은 요소. 즉, 콜백 함수의 대상이 되는 요소
-        // target: addEventListener의 이벤트가 실제로 발생하는 타겟.
+        // Q. 현재 타겟과 그냥 타겟의 차이는?!
+        // A1. currentTarget: addEventListener가 붙은 요소. 즉, 콜백 함수의 대상이 되는 요소
+        // A2. target: addEventListener의 이벤트가 실제로 발생하는 타겟.
         console.log(event.currentTarget, event.target); // currentTarget: ul, target: li
         if (event.target.tagName == "LI") {
           event.target.classList.add("selected");
