210306 | javascript event delegation

--- a/JavaScript/DoYourSelf/shopping-sol/index.html
+++ b/JavaScript/DoYourSelf/shopping-sol/index.html
@@ -22,6 +22,7 @@
     <section class="list">
       <header class="header">
         Shopping List<span class="item__count">0</span>
+        <button class="items__remove">전체 삭제</button>
       </header>
       <ul class="items"></ul>
       <footer class="footer">
@@ -29,6 +30,7 @@
         <button class="footer__button"><i class="fas fa-plus"></i></button>
       </footer>
     </section>
+
     <script src="main.js"></script>
   </body>
 </html>
