210417 | 프로그래머스 해시 문제

--- a/Algorithm/BOJ/index.html
+++ b/Algorithm/BOJ/index.html
@@ -5,17 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body {
-        background-color: black;
-        color: white;
-      }
-    </style>
   </head>
   <body>
-    <div class="app">
-      <h1>Hi</h1>
-    </div>
-    <script src="test6.ts"></script>
+    <script type="module" src="11654_아스키코드.js"></script>
   </body>
 </html>
